# pdf-crawler

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE
cmd/: BUILD.bazel  main.go
crawler/: BUILD.bazel  crawler.go  fetcher.go  handlers.go  url_utils.go  url_utils_test.go
