load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "crawler.go",
        "fetcher.go",
    ],
    importpath = "github.com/dayfine/pdf-crawler/crawler",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_net//html:go_default_library"],
)
