load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "crawler.go",
        "fetcher.go",
        "handlers.go",
        "url_utils.go",
    ],
    importpath = "github.com/dayfine/pdf-crawler/crawler",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_google_uuid//:go_default_library",
        "@org_golang_x_net//html:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["url_utils_test.go"],
    embed = [":go_default_library"],
)
